# flashpoint_project

./: .dockerignore  .gitignore  README.md  dockerfile  extract.py  init.sh  pyproject.toml
flashpoint_de/: __init__.py
