[tool.poetry]
name = "flashpoint-de"
version = "0.1.0"
description = ""
authors = ["Edwin Zamudio <zamudio.e13@gmail.com>"]
readme = "README.md"
packages = [{ include = "flashpoint_de" }]

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^0.9.1"
requests = "^2.31.0"
pandas = "^2.0.0"
pyarrow = "^13.0.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
